crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__dbg_simple.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-49,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @17-24 Apply(
                @17-24 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @17-24 Var {
                        module_name: "",
                        ident: "getFoo",
                    },
                    @17-24 Closure(
                        [
                            @11-14 Identifier {
                                ident: "foo",
                            },
                        ],
                        @29-49 LowLevelDbg(
                            (
                                "test.roc:3",
                                "   ",
                            ),
                            @33-36 Apply(
                                @33-36 Var {
                                    module_name: "Inspect",
                                    ident: "toStr",
                                },
                                [
                                    @33-36 Var {
                                        module_name: "",
                                        ident: "foo",
                                    },
                                ],
                                Space,
                            ),
                            @41-49 Apply(
                                @41-49 Var {
                                    module_name: "",
                                    ident: "bar",
                                },
                                [
                                    @46-49 Var {
                                        module_name: "",
                                        ident: "foo",
                                    },
                                ],
                                Space,
                            ),
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
