crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__dbg_stmt_arg.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-24,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 1),
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-17 Apply(
                @11-17 Var {
                    module_name: "Task",
                    ident: "await",
                },
                [
                    @15-17 Var {
                        module_name: "",
                        ident: "a",
                    },
                    @11-17 Closure(
                        [
                            @15-17 Identifier {
                                ident: "#!0_arg",
                            },
                        ],
                        @11-17 LowLevelDbg(
                            (
                                "test.roc:2",
                                "in",
                            ),
                            @15-17 Apply(
                                @15-17 Var {
                                    module_name: "Inspect",
                                    ident: "toStr",
                                },
                                [
                                    @15-17 Var {
                                        module_name: "",
                                        ident: "#!0_arg",
                                    },
                                ],
                                Space,
                            ),
                            @23-24 Var {
                                module_name: "",
                                ident: "b",
                            },
                        ),
                    ),
                ],
                BangSuffix,
            ),
        ),
    ],
}
