crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__deps_final_expr.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        Index(2147483648),
    ],
    regions: [
        @0-158,
    ],
    space_before: [
        Slice(start = 0, length = 0),
    ],
    space_after: [
        Slice(start = 0, length = 0),
    ],
    spaces: [],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-158 When(
                @16-17 Var {
                    module_name: "",
                    ident: "x",
                },
                [
                    WhenBranch {
                        patterns: [
                            @29-30 Tag(
                                "A",
                            ),
                        ],
                        value: @46-130 Defs(
                            Defs {
                                tags: [
                                    Index(2147483648),
                                ],
                                regions: [
                                    @50-52,
                                ],
                                space_before: [
                                    Slice(start = 0, length = 0),
                                ],
                                space_after: [
                                    Slice(start = 0, length = 0),
                                ],
                                spaces: [],
                                type_defs: [],
                                value_defs: [
                                    Body(
                                        @46-47 Identifier {
                                            ident: "y",
                                        },
                                        @50-52 Num(
                                            "42",
                                        ),
                                    ),
                                ],
                            },
                            @66-130 If(
                                [
                                    (
                                        @69-70 Var {
                                            module_name: "",
                                            ident: "a",
                                        },
                                        @92-94 Var {
                                            module_name: "",
                                            ident: "b",
                                        },
                                    ),
                                ],
                                @128-130 Var {
                                    module_name: "",
                                    ident: "c",
                                },
                            ),
                        ),
                        guard: None,
                    },
                    WhenBranch {
                        patterns: [
                            @139-140 Tag(
                                "B",
                            ),
                        ],
                        value: @156-158 Var {
                            module_name: "",
                            ident: "d",
                        },
                        guard: None,
                    },
                ],
            ),
        ),
    ],
}
