crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__expect_then_bang.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-31,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 1 },
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-31 Defs(
                Defs {
                    tags: [
                        EitherIndex(2147483648),
                    ],
                    regions: [
                        @11-24,
                    ],
                    space_before: [
                        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                    ],
                    space_after: [
                        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                    ],
                    spaces: [],
                    type_defs: [],
                    value_defs: [
                        Expect {
                            condition: @18-24 Apply(
                                @20-22 Var {
                                    module_name: "Bool",
                                    ident: "isEq",
                                },
                                [
                                    @18-19 Num(
                                        "1",
                                    ),
                                    @23-24 Num(
                                        "2",
                                    ),
                                ],
                                BinOp(
                                    Equals,
                                ),
                            ),
                            preceding_comment: @11-11,
                        },
                    ],
                },
                @29-31 Var {
                    module_name: "",
                    ident: "x",
                },
            ),
        ),
    ],
}
