crates/compiler/can/tests/snapshots/test_suffixed__suffixed_tests__last_stmt_not_top_level_suffixed.snap
---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
    ],
    regions: [
        @0-26,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 1 },
    ],
    spaces: [
        Newline,
    ],
    type_defs: [],
    value_defs: [
        Body(
            @0-4 Identifier {
                ident: "main",
            },
            @11-26 Defs(
                Defs {
                    tags: [
                        EitherIndex(2147483648),
                    ],
                    regions: [
                        @15-17,
                    ],
                    space_before: [
                        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                    ],
                    space_after: [
                        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
                    ],
                    spaces: [],
                    type_defs: [],
                    value_defs: [
                        Body(
                            @11-12 Identifier {
                                ident: "x",
                            },
                            @15-17 Num(
                                "42",
                            ),
                        ),
                    ],
                },
                @11-26 Apply(
                    @11-26 Var {
                        module_name: "Task",
                        ident: "await",
                    },
                    [
                        @24-25 Var {
                            module_name: "",
                            ident: "b",
                        },
                        @11-26 Closure(
                            [
                                @24-25 Identifier {
                                    ident: "#!0_arg",
                                },
                            ],
                            @22-26 Apply(
                                @22-23 Var {
                                    module_name: "",
                                    ident: "a",
                                },
                                [
                                    @24-25 Var {
                                        module_name: "",
                                        ident: "#!0_arg",
                                    },
                                ],
                                Space,
                            ),
                        ),
                    ],
                    BangSuffix,
                ),
            ),
        ),
    ],
}
